--- a/report.bib
+++ b/report.bib
@@ -12,7 +12,7 @@
  author    = "",
  title     = " ",
  publisher = " ",
- address   = "http://www.mth.msu.edu/~jhall/classes/codenotes/coding-notes.html ",
+ howpublished   = "\url{http://www.mth.msu.edu/~jhall/classes/codenotes/coding-notes.html}",
  annote = "Exhaustive lecture notes - almost like a book"
 }
 
@@ -118,49 +118,6 @@
   year={2007}
 }
 
-@book{wilson,
-  title={{A course in combinatorics}},
-  author={van Lint, J.H. and Wilson, R.M.},
-  year={2001},
-  publisher={Cambridge Univ Pr}
-}
-
-@misc{sloane,
-  title={{The Theory of Correcting Codes}},
-  author={Sloane, N. and MacWilliams, F.},
-  year={1979},
-  publisher={North Holland, Amsterdam}
-}
-
-@book{vanlint,
-  title={{Introduction to coding theory}},
-  author={Van Lint, J.H.},
-  year={1999},
-  publisher={Springer Verlag}
-}
-
-
-@book{pless,
-  title={{Introduction to the theory of error-correcting codes}},
-  author={Pless, V.},
-  year={1998},
-  publisher={Wiley-Interscience}
-}
-
-@book{huffman,
-  title={{Fundamentals of error-correcting codes}},
-  author={Huffman, W.C. and Pless, V.},
-  year={2003},
-  publisher={Cambridge Univ Pr}
-}
-
-@book{assmus,
-  title={{Designs and their Codes}},
-  author={Assmus, EF and Key, JD},
-  year={1994},
-  publisher={Cambridge Univ Pr}
-}
-
 
 @conference{gopalan2008list,
   title={{List-decoding Reed-Muller codes over small fields}},
@@ -226,5 +183,127 @@
   pages={7473},
   year={2004},
   publisher={Citeseer}
+}
+
+
+@conference{elias,
+  title={{List decoding for noisy channels}},
+  author={Elias, P.},
+  booktitle={Wescon Convention Record},
+  pages={94--104}
+}
+
+
+@conference{correlation,
+  title={{Fast Correlation Attack Algorithm with List Decoding and an Application}},
+  author={Mihaljevi, M.s and Fossorier, M. and Imai, H.},
+  booktitle={Fast Software Encryption},
+  pages={331--350},
+  organization={Springer}
+}
+
+
+@article{attack,
+  title={{Cryptanalysis of the Sidelnikov cryptosystem}},
+  author={Minder, L. and Shokrollahi, A.},
+  journal={Advances in Cryptology-EUROCRYPT 2007},
+  pages={347--360},
+  publisher={Springer}
+}
+
+
+@article{dumer2004recursive,
+  title={{Recursive decoding and its performance for low-rate Reed-Muller codes}},
+  author={Dumer, I.},
+  journal={IEEE Transactions on Information Theory},
+  volume={50},
+  number={5},
+  pages={811--823},
+  year={2004},
+  publisher={Institute of Electrical and Electronics Engineers, Inc, 445 Hoes Ln, Piscataway, NJ, 08854-1331, USA,}
+}
+
+
+
+@conference{dumer2008,
+  title={{On complexity of decoding Reed-Muller codes within their code distance}},
+  author={Dumer, I. and Kabatiansky, G. and Tavernier, C. and Le Plessis Robinson, F.}
+}
+
+
+
+%% BOOKS %%%
+
+
+@book{sloane,
+  title={{The Theory of Correcting Codes}},
+  author={Sloane, N. and MacWilliams, F.},
+  year={1979},
+  publisher={North Holland, Amsterdam}
+}
+
+@book{vanlint,
+  title={{Introduction to coding theory}},
+  author={Van Lint, J.H.},
+  year={1999},
+  publisher={Springer Verlag}
+}
+
+
+@book{pless,
+  title={{Introduction to the theory of error-correcting codes}},
+  author={Pless, V.},
+  year={1998},
+  publisher={Wiley-Interscience}
+}
+
+@book{huffman,
+  title={{Fundamentals of error-correcting codes}},
+  author={Huffman, W.C. and Pless, V.},
+  year={2003},
+  publisher={Cambridge Univ Pr}
+}
+
+@book{assmus,
+  title={{Designs and their Codes}},
+  author={Assmus, EF and Key, JD},
+  year={1994},
+  publisher={Cambridge Univ Pr}
+}
+
+@book{wilson,
+  title={{A course in combinatorics}},
+  author={van Lint, J.H. and Wilson, R.M.},
+  year={2001},
+  publisher={Cambridge Univ Pr}
+}
+
+@book{peterson,
+  title={{Error-correcting codes}},
+  author={Peterson, W.W. and Weldon, EJ},
+  year={1972},
+  publisher={The MIT Press}
+}
+
+@book{lin,
+  title={{Error control coding}},
+  author={Lin, S. and Costello, D.J.},
+  year={1983},
+  publisher={Prentice-Hall Englewood Cliffs, NJ}
+}
+
+
+%%%%% URLS %%%%%%%
+
+
+@Misc{ShannonLec,
+  OPTkey = 	 {},
+  OPTauthor = 	 {},
+  OPTtitle = 	 {},
+  OPThowpublished = {\url{www.systems.caltech.edu/EE/Faculty/rjm/papers/ShannonLecture.pdf}},
+  OPTmonth = 	 {},
+  OPTyear = 	 {},
+  OPTnote = 	 {},
+  OPTannote = 	 {}
 }
 
