--- a/_region_.tex
+++ b/_region_.tex
@@ -25,6 +25,8 @@
 
 \newcommand{\V}[1]{\ensuremath{\mathbf{#1}}}
 
+\newcommand{\slm}{Sloane MacWilliams}
+
 %%% Theorems %%%
 \theoremstyle{plain}
 \newtheorem{thm}{Theorem}
@@ -46,7 +48,7 @@
 \maketitle
 
 \begin{abstract} 
-This Seminar Report gives an introduction to the Reed-Muller family of Error Correcting Codes. Reed-Muller codes are one of the oldest codes used for error correction. The construction and various interpretations of the codewords is discussed. Reed Muller codes are primarily used because of their large error correcting ability and easy decoding - hence a survey of the decoding techniques and algorithms is presented. Some applications of the code are also presented. Some applications of the code to error correction and other areas are listed.
+This Seminar Report gives an introduction to the Reed-Muller family of Error Correcting Codes. The construction and various interpretations of the codewords is discussed. Reed Muller codes are primarily used because of their large error correcting ability and easy decoding - hence a survey of the decoding techniques and algorithms is presented. Some applications of the code are also presented. Some applications of the code to error correction and other areas are listed.
 \end{abstract}
 
 
@@ -65,13 +67,13 @@ Most famously used to transmit live images of mars in the Mariner-9 mission in 1
 
 %% OK
 
-$\F _q$ denotes a finite field of order $q$.
+$\F{} _q$ denotes a finite field of order $q$.
 Throughout, unless otherwise explicity stated, $q=2$ and therefore $F=\{0,1\}$, with the addition operation being equivalent to the binary exclusive-or (\emph{xor}), and the multiplication operation being the binary \emph{and}.
 
-A vector field over $\F$,(with the length of the vector being $n$) will be denoted by $F^n$.
+A vector field over $\F{}$,(with the length of the vector being $n$) will be denoted by $F^n$.
 %% For more on vector fields and finite fields, refer to \cite{vectors},chapter 4 of \cite{singa} , but a very basic understanding is sufficient for understanding \rem{} codes.
 
-We use a string of length $n$ with elements in $\F_2$ to write a vector in the vector space $\F_2^n$ . For example, if we have the vector $\mathbf{v} = (1,0,1,1,0,1,0,1) \in \F_2^8$, we simply write $\V{v}$ as $10110101$. 
+We use a string of length $n$ with elements in $\F{}_2$ to write a vector in the vector space $\F_2^n$ . For example, if we have the vector $\mathbf{v} = (1,0,1,1,0,1,0,1) \in \F_2^8$, we simply write $\V{v}$ as $10110101$. 
 
 We shall also deal with boolean functions, and shall denote the boolean \emph{xor} by $+$, instead of the customary $\oplus$ to maintain consistency with the addition operation in $F_2$. 
 
@@ -81,7 +83,7 @@ The distance between two vectors $\V{u}$ and $\V{v}$ which we are concerned abou
 Analogously, the Hamming weight of a vector is defined as:
 $$ $$
 \begin{equation}
-wt(x) = d(x,0) = \{ 
+wt(x) = d(x,0) = \left{ 
 \begin{array}{rl} 
 1 & \text{if } x \neq 0 \\
 0 & \text{if } x = 0 
@@ -103,7 +105,7 @@ In the example below, $x_1, x_2, x_3$ are rows and $f(x_1, x_2, x_3)$ is compute
 $x_1$ & $0$ & $0$ & $0$ & $0$ & $1$ & $1$ & $1$ & $1$ \\
 $x_2$ & $0$ & $0$ & $1$ & $1$ & $0$ & $0$ & $1$ & $1$ \\
 $x_3$ & $0$ & $1$ & $0$ & $1$ & $0$ & $1$ & $0$ & $1$ \\
-$f$   & $0$ & $0$ & $0$ & $1$ & $1$ & $0$ & $0$ & $0$ \\
+$f$   & $0$ & $1$ & $0$ & $1$ & $0$ & $1$ & $1$ & $0$ \\
 
 \end{tabular}
 \end{center} 
@@ -113,9 +115,9 @@ Since $(x_1,x_2,\ldots,x_m)$ can take $2^m$ values, $\V{f}$ is a $n=2^m$ length 
 The Reed-Muller codes are particular subsets of this collection as described below.
 
 $f$ can be written in the disjunctive normal form.
-Using logical operations, $f$ can be represented as a function of the $x_1, x_2,\ldots , x_m$. In the above example, for instance, $f = x_1 \vee x_2 \vee x_3 ... $. We can represent any boolean function in the disjunctive Normal form (with or replaced by xor) \cite{Problem2}, for instance in the above example $f = $
+Using logical operations, $f$ can be represented as a function of the $x_1, x_2,\ldots , x_m$. In the above example, for instance, $f = x_3 + x_1x_2$. 
 
-If there $f$ is an $m-ary$ function, it can take the $2^m$ input values. Hence $\V{f}$ and $x_1,x_2,\ldots \x_m$ have length $2^m$. Since $\V{f}$ is also a linear combination, it follows that the length of $x_1, x_2,ldots,x_m$ is $2^m$. 
+If $f$ is an $m-ary$ function, it can take the $2^m$ input values. Hence $\V{f}$ and $x_1,x_2,\ldots \x_m$ have length $2^m$. Since $\V{f}$ is also a linear combination, it follows that the length of $x_1, x_2,ldots,x_m$ is $2^m$. 
 
 Let the set of boolean monomials be:
 \begin{equation*}
@@ -130,12 +132,14 @@ There are
 distinct monomials. 
 
 A Boolean polynomial is a linear combination (with coefficients in $F_2$) of boolean monomials. The degree of the boolean polynomial is the degree of the its highest term (monomial).
+We can represent any Boolean function in the Disjunctive Normal Form (with or replaced by xor), and represent the Boolean function $f$ as :
 \begin{equation*}
   f = 1 + a_1x_1+a_2x_2+\ldots+a_mx_m + a_{12}x_1x_2+\ldots+a_{12\ldots r}x_1x_2\ldots x_r+\ldots
 \end{equation*}
 
+\footnote{The interchange between Boolean functions and their corresponding vector representation can get confusing at times.In fact, Boolean logic using exclusive-or is also called Reed-Muller logic \cite{rm-logic}}
 
-The polynomials (we will drop the term boolean from here on) of degree $1$ are simply the linear combination of $m$ vectors.
+The polynomials (we will drop the term Boolean from here on) of degree $1$ are simply the linear combination of $m$ vectors.
 \begin{equation}
  \V{1}+a_1x_1+a_2x_2+\ldots+a_mx_m
 \end{equation}
@@ -158,7 +162,11 @@ Thus the boolean monomial set $M$ consists of linearly independent vectors, and 
 \end{lemma}
 
 From the above proof:
-The monomials of degree $\leq r$ thus form a basis for $\RM{r}{m}$
+The monomials of degree $\leq r$ thus form a basis for $\RM{r}{m}$. The number of monomials of degree $\leq r$ is thus equal to the dimension ($k$) of $\RM{r}{m}$.
+\begin{equation}
+  \label{eq:2}
+  \text{ The dimension } of $\RM{r}{m}$ , k= 1+\binom{m}{1}+\binom{m}{2}+\ldots+\binom{m}{r}
+\end{equation}
 
 Let $G(r,m)$ denote the \emph{Generator Matrix} of $\RM{r}{m}$. It consists of all the monomials from set $M$ of degree $\leq r$.
 \begin{equation}
@@ -176,24 +184,20 @@ Let $G(r,m)$ denote the \emph{Generator Matrix} of $\RM{r}{m}$. It consists of a
   \end{pmatrix}
 \end{equation}
 
-$\RM{0}{m} $ is the repetition code. At the other extreme $\RM{m}{m}$ is a code consisting of all possible binary sequences of length $m$.
+$\RM{0}{m} $ is the repetition code ($2^m$ repetition). At the other extreme $\RM{m}{m}$ is a code consisting of all possible binary sequences of length $2^m$.
 
 
-\subsection{clarification}
+\begin{tabular}[center]{|c|c|}
+\hline
+Length & $n = 2^m$ \\
+Minimum Distance & $d = 2^{m-r}$ \\
+Dimension & $k= 1+\binom{m}{1}+\binom{m}{2}+\ldots+\binom{m}{r}$ \\
+\hline
+\end{tabular}
 
-In what follows, we frequently switch back and forth between 
-B(r, {v1 , . . . , vm}) 
-and 
-R(r, m). Doing so in the most explicit manner would make the reasoning a 
-lot harder to read, and for this reason we decided to treat codewords and Boolean 
-functions as interchangeable.
-In fact, boolean logic using xor is also called reed-muller logic! \cite{rmlogic}
+Thus, $\RM{r}{m}$ is an $[2^m,1+\binom{m}{1}+\binom{m}{2}+\ldots+\binom{m}{r}, 2^{m-r}]$ linear code.
 
-Properties:
-Length, $n = 2^m$
-Minimum Distance, $d = 2^{m-r}$
-Dimension, $k=1+..$
-
+%%move up?
 The rate of an $[n, k]$ code is deﬁned as $k/n$. 
 (Thinking of the code as having $n − k$ check digits and $k$ message 
 digits.
@@ -218,15 +222,15 @@ Then
 \begin{theorem}
   Uniqueness: Any linear code with parameters $[2^m, m+1, 2^{m} ]$ is equivalent to the first order \rem{} code.
 \begin{proof}[from \cite{uniq}]
-  
+  \emph{DO THIS PROOF}.
 \end{proof}
 \end{theorem}
 
-Run-length properties at \cite{syncro}
+Run-length properties at \cite{runlen}
 
 
 \subsection{Recursive Formulation}
-
+\label{recursive}
 \begin{thm}
 $\RM{r+1}{m+1} =  \{ \V{u} | \V{u}+\V{v} : \V{u} \in \RM{r+1}{m}, \V{v} \in \RM{r}{m} \}$
 
@@ -464,6 +468,8 @@ v2\cdot v_3 \quad& 0&0&0&1&0&0&0&1 \\
 
 
 \section{Bounds}
+\label{bounds}
+
 $A_q(n, d)$ is the largest integer $M$ such that there exists a $q$-ary $(n, M, d)$ code where $M$ is the number of codewords. A $q$-ary $(n, M, d)$ code $C$ is called optimal if $M = A_q(n, d)$. 
 
 The \rem{} codes satisfy the \emph{Plotkin bound}.
@@ -488,30 +494,48 @@ Since $\sum{D_{ji}} = 2^k $, we have:
 \begin{equation*}
   D = n2^{2k} - \sum_{i \in n}{\sum_{j=\{0,1\}} {D_{ji}^2}}
 \end{equation*}
-
+Some manipulation yields:
 \begin{equation*}
   \sum_{j=0,1}{D_{ji}^2} \geq 2^{2k-1}, \qquad i \in n
 \end{equation*}
-Combining the upper and the lower bounds, we obtain:
+Combining the upper and the lower bounds:
 \begin{equation*}
-  2^k(2^k-1)d \leq D \leq n2^
+  2^k(2^k-1)d \leq D \leq n2^{2k-1}
 \end{equation*}
 
   \end{proof}
 \end{theorem}
 
-It can be verified that $\RM{1}{m}$ codes satisfy this bound. This can also be shown by using the fact proved in \ref{equidistant} that $\RM{1}{m}$ are equidistant codes, and using that result in the proof of the plotkin bound.
+It can be verified that $\RM{1}{m}$ codes satisfy this bound. The right hand side is:
+\begin{equation*}
+  \frac{2^m2^{1+m-1}}{2^{1+m}-1}
+\end{equation*}
+which is asymptotically equal to $d= 2^{m-1}$. Since we have hit a bound, $\RM{1}{m}$ codes are optimal.
+
+We can also confirm this by noting that the equality holds only if the code is equidistant, and that has already been shown in \ref{equidistant}.
 
 
 \subsection{Geometries}
 
-Some properties of the \rem{} codes can be best stated using finite geometries. A comprehensive source of the relation between the code and finite geometry is ~\cite{assumus} and ~\cite{sloane}.
+Some properties of the \rem{} codes can be best stated using finite geometries. A comprehensive source of the relation between the code and finite geometry is ~\cite{assumus-polynomial} and ~\cite{sloane}.
+
+\begin{lem}
+  $\V{f} \in \RM{r}{m}$ is the incidence vector of the set $S$, then $\V{hf} \in \RM{r+1}{m}$ is the incidence vector of $S \cup H$
+\end{lem}
 
 \begin{thm}
   Let $f$ be a minimum weight codeword of $\RM{r}{m}$, and $f = \chi(S) $. Then $S$ is an $(m-r)$ dimensional flat in $AG(m,2)$.
 
-  \begin{proof}
-    TODO from sloane macwilliams.
+  \begin{proof}[From \cite{slonae}]
+Let $H$ be a hyperplane in $AG(m,2)$ and let $H'$ be the parallel hyperplane.
+
+By the previous lemma, $S \cap H$ and $S \cap H'$ are in $\RM{r+1}{m}$ and thus contain $0$ or $\geq 2^{m-r-1}$ points. (Minimum weight , \ref{minwt}). 
+But since $|S| = 2^{m-r} = |S \cap H| + |S \cap H'| $ , we have
+\begin{equation*}
+  |S H| = 0,2^{m-r-1}, \text{ or } 2^{m-r}
+\end{equation*}
+
+Using the rothschild-vanlint theorem \cite{rothschild}, we get that $S$ is an $(m-r)$-dimensional flat in $AG(m,2)$.
   \end{proof}
 \end{thm}
 
@@ -519,7 +543,7 @@ The converse of this theorem also holds:
 \begin{thm}
   The incidence vector of any $(m-r)$ dimensional flat in $AG(m,2)$ is a codeword in $\RM{r}{m}$.
   \begin{proof}
-    Every $(m-r)$ dimensional flat in $AG(m,2)$ can be represented by $r$ linearly independent linear equations of the form
+    Every $(m-r)$ dimensional flat in $AG(m,2)$ can be represented by $r$ linearly independent linear equations of the form      
     \begin{equation*}
       \sum_{j \in m}{a_{ij}c_j = b_i}, \qquad i\in r
     \end{equation*}
@@ -561,7 +585,7 @@ $V+x$ is a contained in $W+x$. Also the collection of all these $W+x$ flats inte
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section {Weight distribution}
 
-For the codes of order $r\geq2$, determining the complete weight distribution is hard. (impossible).
+For the codes of order $r\geq 2$, determining the complete weight distribution is hard. (impossible).
 For $r=1$, as shown \ref{r1m}, the weight of all words is $2^{m-1}$.
 
 Considerable work has been done to establish the distribution for $\RM{2}{m}$. We state the classic results (for proofs see \cite{sloane}) : 
@@ -571,7 +595,15 @@ Considerable work has been done to establish the distribution for $\RM{2}{m}$. W
   \label{eq:4}
   \text{There are at least} 2^{mr−r(r−1)} . 
 \text{minimum weight codewords in } \RM{r}{m}. 
+\end{equation}
 
+For the second order codes, we have:
+\begin{equation}
+  \label{eq:6}
+  A_i =  0 \qquad i \neq 2^{m-1}, 2^{m-1}+-2^{m-1-h} \text{ for } 0 \leq h \leq [m/2]
+  A_0 = 1
+  A_{2^m} = 1
+  A_{ 2^{m-1}+-2^{m-1-h}} = 2^{h(h+1)}\cdot \frac{(2^m - 1)(2^{m-1}-1)\ldots (2^{m-2h+1} -1)} { (2^{2h} -1)(2^{2h-2} -1)\ldots (2^{2} -1)}
 \end{equation}
 
 \section{cyclic decoding}
@@ -631,7 +663,7 @@ We get the desired result by using the previous theorem.
 
 
 \subsection{L-step decoding}
-
+\cite{mann}
 We can extend the idea of step-decoding using orthogonal parity checks by generalizing for parity check equations to be orthogonal on a set of coordinates. 
 
 Definition: A set of parity checks $S_1, S_2,\ldots$ is orthogonal on coordinates $i,j,..$ if the sum $x_i+x_j+\ldots$ appears in each S but no other $x_p$ appears more than once in the set.
@@ -669,13 +701,22 @@ J \leq 2n/d' -1
 
 The Reed decoding algorithm is a majority logic decoding scheme for decoding \rem{} codes of any order.
 
-Each codeword from $\RM{r}{m}$ is an incidence vector that deﬁnes a subspace in  in which the nonzero coordinates of the codeword are points lying in the 
-subspace. Based upon this geometry we can ﬁnd equations for orthogonal checksums as follows. To ﬁnd a set of orthogonal checksums that provide an estimate for the $k$-th order message bit $m_{i_1,i_2 ,... ,i_k} corresponding to the basis vectors v_{i_1}v_{i_{2}}\ldots v_i_k$. 
+Each codeword from $\RM{r}{m}$ is an incidence vector that deﬁnes a subspace in which the nonzero coordinates of the codeword are points lying in the 
+subspace. 
+For example, if $\V{y} = 00001111 \in \RM{1}{3}$, then the corresponding points are $\{P_4,P_5,P_6,P_7\}$ .Their binary representation is $\{(100),(101),(110),(111)\}$ (simply the binary representation of the indices).
+Based upon this geometry we can ﬁnd equations for orthogonal checksums. Our goal is to ﬁnd a set of orthogonal checksums that provide an estimate for the $k$-th order message bit $m_{i_1,i_2,ldots ,i_k}$ corresponding to the basis vectors $x_{i_1}x_{i_{2}}\ldots x_i_k$. 
 
 Let the corresponding subspace be $S$.
-Let $T$ be the complementary subspace of $S$ where $j_1j_2\ldotsj_{m-k} = {1,2,ldots,m}-{i_1,i_2,\ldots,i_k}.$ The incidence vector of $T$ is v. <todo>
+Let $T$ be the complementary subspace of $S$ where $j_1j_2\ldots j_{m-k} = {1,2,ldots,m}-{i_1,i_2,\ldots,i_k}.$ 
+The incidence vector of $T$ is $\V{x_j_1}\V{x_j_2}\ldots \V{x_j_{m-k}}$
 
-Define a \emph{Translate} of a subspace with respect to a point to be the subspace obtained by adding the binary representation of the point to each element of the subspace. 
+Define a \emph{Translate} of a subspace,$T$ with respect to a point $\V{y}$ to be $y+T$.
+
+In the reed decoding scheme, the checksums are the codeword coordinates specified by $T$. 
+
+
+
+%%the subspace obtained by adding the binary representation of the point to each element of the subspace. 
 
 \begin{them}
   If there are no errors, the message bit $m_b$ is given by 
@@ -685,7 +726,7 @@ Define a \emph{Translate} of a subspace with respect to a point to be the subspa
   \begin{proof}
     A codeword can be written as
     \begin{equation*}
-      \V{v} = \sum_{t=i_1i_2\ldotsi_s}{a_t\V{x_{i_1}}\V{x_{i_2}}\ldots \V{x_{i_s}}}
+      \V{v} = \sum_{t=i_1i_2\ldots i_s}{a_t\V{x_{i_1}}\V{x_{i_2}}\ldots \V{x_{i_s}}}
     \end{equation*}
     The sum is over all the subsets $\{i_1,i_2 ldots i_s \}$ of $\{1 \ldots m\}$ of size atmost $r$.
 Summing up $\V{v}$ over all the translates gives:
@@ -717,7 +758,7 @@ We can use the finite geometry construction of the codes to help in the decoding
 \subsection {Hadamard Transforms}
 
 \begin{def}
-  Real Vector $\V{F(v)}$ of a binary vector $\V{v}$ is a vector with $0$ replaced by $1$ and $1$ by $-1$.
+  The \emph{Real Vector} ${F(\V{v})}$ of a binary vector $\V{v}$ is a vector with $0$ replaced by $1$ and $1$ by $-1$.
 \end{def}
 
 \begin{lem}
@@ -732,10 +773,11 @@ We can use the finite geometry construction of the codes to help in the decoding
       We can prove using induction on the basis vectors. Since the code is a linear combination, the result follows.
     \end{proof}
   \end{claim}
-This is also the definition of the hadamard matrix.
+ This is also the definition of the Hadamard matrix.
 \end{proof}
 \end{lem}
 
+The \rem{} codes can thus be written like:
 \begin{equation}
   \label{eq:3}
   \RM{1}{m} =
@@ -745,21 +787,27 @@ This is also the definition of the hadamard matrix.
   \end{pmatrix}
 \end{equation}
 
+Since the purpose of decoding is the find the codeword $\V{c}$ closest to the received vector $\V{v}$, we will want to maximize the correlation between the two, where correlation is the dot-product.
 
+The Hadamard transform computes the correlation of the received vector $F(v)$ with each of the rows of the Hadamard matrix. Let the vector which has the largest correlation with $v$ be $c$. Then the goal is find $c$.
 
-Keeping note that the code has been converted to the real-vector form, maximizing $F(v)H_m$ is equivalent to finding the least-distance neighbour of $\V{v}$.
-This would entail doing a simple vector product with each row of the hadamard matrix.
-If the correlation is negative, the absolute value is considered since the correlation of the negation of the corresponding row of the hadamard matrix is .
+Also note that \begin{equation} F(\V{v}) = -F(\V{1}+\V{v}) \end{equation}. We will thus consider the absolute value of the correlation.
 
- There are $n$ such rows, and we need $O(n^2)$ operations.
-However, by using the \emph{Fast Hadamard Transform }, we can speed it up to $O(nlogn)$.
+Because the rows of the matrix are the real-vector versions of the binary representation of the numbers from $1,\ldots 2^{m-1}$, we can determine the coordinate $a=(a_m\ldots a_1)$, where $a$ is the correlation value.
+ 
+If the correlation is negative, then $c = \v{1}+a_iv_i$. Otherwise  $c = \v{1}+a_iv_i$.
 
+\subsubsection{Fast Hadmard Transform}
+In the Hadamard Transform, we need to compute the $n$  products  of vectors of length $n$, resulting in $O(n^2)$ operations. 
+However, by using the \emph{Fast Hadamard Transform }, we can improve the number of operations to $O(nlogn)$. We use the recursive formulation of the Hadamard matrix  to prove the following theorem.  
+
+Let $A \otimes B$ be the Kronecker product of matrices $A$ and $B$.
 
 \begin{thm}
   \begin{equation*}
     H_{2^m} = M_{2^m}^{(1)}M_{2^m}^{(2)} \ldots M_{2^m}^{(m)}
 \text{ where }
-  M_{2^m}^{(i)} = I_{2^{m-i}}\otimes H_2 \oplus I_{2^{i-1}}, \qquad 1 \leq i \leq m
+  M_{2^m}^{(i)} = I_{2^{m-i}}\otimes H_2 \otimes I_{2^{i-1}}, \qquad 1 \leq i \leq m
   \end{equation*}
   \begin{proof}
     By simple induction on m.
@@ -767,18 +815,15 @@ However, by using the \emph{Fast Hadamard Transform }, we can speed it up to $O(
 \end{thm}
 
 
-This is the fastest classical decoding technique and was employed in the \emph{Green Machine} decoder for the Mariner-9 space mission. 
+This technique was employed in the \emph{Green Machine} \cite{green} decoder for the Mariner-9 space mission. 
 
-For a detailed look into the construction of the decoder, refer ~\cite{sloane}
+For a detailed look into the construction of the decoder, refer ~\cite{sloane}.
 
 \subsection {List Decoding}
 
 A list decoding procedure for a code $C$ is a function which for given a $\V{u} \in F_q^n$ and $e > 0$ outputs all $v \elem C$ such that $\d(u,v) \leq e$. Alternately, given a decoding radius $T$, it should produce a list (set) of codewords which are distance less than $T$. List decoding is an old technique given by P.Elias in 1950 \cite{elias}, but has recently found significant attention.
 
 The existence of a good, fast list decoding algorithm for the first order \rem{} codes was given by goldreich and levin \cite{goldreich}, \cite{sudan}. However they do not give a usable algorithm. Recently, Kabatiansky, Dumer and Tavernier \cite{kabatiansky}, \cite{dumer} have presented a simple list decoding algorithm for $\RM{1}{m}$ capable of correcting $n(\frac{1}{2} - \epsilon)$ errors in $O(n \epsilon^3)$. This is significantly better than the $\frac{n}{4}$ correcting capability of the Hadamard transform \ref{}, which uses $O(nlogn)$ time.
-
-
-The algorithm  
 
 
 
@@ -857,13 +902,18 @@ This algorithm is similar to the fast hadamard transform described earlier \ref{
 For a proof of correctness of the algorithm , see \cite{kabatiansky}. Analysis of running times and a probabilistic version is also presented. 
 
 
+\subsection{general bounds}
+\cite{dumer2008}
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Other decoding algorithms}
 Besides the algorithms presented above, there exists a large number of algorithms. 
 Majority logic algorithms are:
 Some run in $O(n)$ time. There are hard and soft decision algorithms as well.
 
-\section{Generalized \rm codes}
+See \cite{fourier}, \cite{dumer2004recursive}, \cite{gopalan2008list} 
+
+\section{Generalized \rem codes}
 
 \section {Applications}
 \label{applications}
@@ -880,11 +930,11 @@ The oldest and original use. \rem{} codes were used in the 1969 Mariner-9 deep s
 
 Using $\RM{1}{m}$ codes to test whether a binary function is a low-degree polynomial. The functions are mapped to the \rem{} codes, and the properties are used to prove the bounds on the number of queries needed. 
 
-\subsection{Sidenkov cryptanalysis}
+\subsection{Sidelnikov cryptanalysis}
 
-The Sidenkov public-key system, (a variant of the McEliece cryptosystem) uses \rem{} codes instead of Goppa codes because of the efficient decoding ~\cite{sidenkov}.
+The Sidenikov public-key system, (a variant of the McEliece cryptosystem) uses \rem{} codes instead of Goppa codes because of the efficient decoding ~\cite{sidelnikov}.
 A cryptanalysis attack also uses the properties of \rem{} codes to break the cryptographic code ~\cite{attack}. The uniqueness result proved earlier is a central feature in the cryptographic attack.
-
+~\cite{correlation}
 \subsection{Side Channel attacks}
 
 ~\cite{roche}
@@ -906,4 +956,4 @@ A cryptanalysis attack also uses the properties of \rem{} codes to break the cry
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \end{document}
 
-\message{ !name(report.tex) !offset(-909) }
+\message{ !name(report.tex) !offset(-959) }
