--- a/report.bib
+++ b/report.bib
@@ -3,13 +3,13 @@
  title     = "MIT 6.451 Principles of Digital Communication II",
  publisher = "OCW",
  year      =  2005,
- address   = "http://ocw.mit.edu/OcwWeb/Electrical-Engineering-and-Computer-Science/6-451Spring-2005/LectureNotes/index.htm",
+ howpublished   = {\url{http://ocw.mit.edu/OcwWeb/Electrical-Engineering-and-Computer-Science/6-451Spring-2005/LectureNotes/index.htm}},
  annote = "Good for finite fields.Video lectures also available."
 }
 
 
 @misc{jhall,
- author    = "",
+ author    = "J. Hall",
  title     = " ",
  publisher = " ",
  howpublished   = "\url{http://www.mth.msu.edu/~jhall/classes/codenotes/coding-notes.html}",
@@ -21,7 +21,7 @@
  author    = "",
  title     = " ",
  publisher = " ",
- address   = "http://www-math.cudenver.edu/~wcherowi/courses/m6409/acln.html",
+ howpublished   = {\url{"http://www-math.cudenver.edu/~wcherowi/courses/m6409/acln.html}},
  annote = "applications"
 }
 
@@ -36,14 +36,14 @@
 
 @misc{side+channel,
  author    = "Thomas Roche, Cedric Tavernier ",
- title     = "Side channel attacks based on linearapproximations ",
+ title     = "Side channel attacks based on line arapproximations ",
  publisher = " ",
  address   = "",
  annote = "."
 }
 
 
-@misc{fourier,
+@misc{fourier, 
  author    = "Parikshit Gopalan",
  title     = "A Fourier-analytic approach to Reed-Muller decoding. ",
  publisher = " ",
@@ -101,7 +101,7 @@
   year={2006}
 }
 
-@conference{dumer,
+@conference{dumer+complexity,
   title={{On complexity of decoding Reed-Muller codes within their code distance}},
   author={Dumer, I. and Kabatiansky, G. and Tavernier, C. and Le Plessis Robinson, F.},
   booktitle={Proc. Eleventh International Workshop on Algebraic and Combinatorial Coding Theory},
@@ -128,16 +128,6 @@
   organization={ACM}
 }
 
-@article{dumer2004recursive,
-  title={{Recursive decoding and its performance for low-rate Reed-Muller codes}},
-  author={Dumer, I.},
-  journal={IEEE Transactions on Information Theory},
-  volume={50},
-  number={5},
-  pages={811--823},
-  year={2004},
-  publisher={Citeseer}
-}
 
 @article{forney1999generalized,
   title={{Generalized State Realizations of Reed-Muller Codes}},
@@ -223,6 +213,10 @@
   publisher={Institute of Electrical and Electronics Engineers, Inc, 445 Hoes Ln, Piscataway, NJ, 08854-1331, USA,}
 }
 
+@article{cooke,
+  title={{Reed-muller error correcting codes}},
+  author={Cooke, B.}
+}
 
 
 @conference{dumer2008,
@@ -231,8 +225,89 @@
 }
 
 
+@article{sidelnikov,
+  title={{A public-key cryptosystem based on binary Reed-Muller codes}},
+  author={Sidelnikov, VM},
+  journal={Discrete Mathematics and Applications},
+  volume={4},
+  number={3},
+  pages={191--208},
+  year={1994},
+  publisher={Walter de Gruyter, Berlin/New York Berlin, New York}
+}
 
-%% BOOKS %%%
+@conference{goldreich,
+  title={{A hard-core predicate for all one-way functions}},
+  author={Goldreich, O. and Levin, LA},
+  booktitle={Proceedings of the twenty-first annual ACM symposium on Theory of computing},
+  pages={25--32},
+  year={1989},
+  organization={ACM}
+}
+
+
+@article{assmus-polynomial,
+  title={{POLYNOMIAL CODES AND FINITE GEOMETRIES}},
+  author={Assmus Jr, EF and Key, JD}
+}
+
+
+@article{space,
+  title={{Deep-space communications and coding: A marriage made in heaven}},
+  author={Massey, J.},
+  journal={Advanced Methods for Satellite and Deep Space Communications},
+  pages={1--17},
+  publisher={Springer}
+}
+
+
+@article{sudan,
+  title={{List decoding: Algorithms and applications}},
+  author={Sudan, M.},
+  journal={Theoretical Computer Science: Exploring New Frontiers of Theoretical Informatics},
+  pages={25--41},
+  publisher={Springer}
+}
+
+@article{green,
+  title={{An error-correcting encoder and decoder of high efficiency}},
+  author={Green, JH and San Soucie, RL},
+  journal={Proceedings of the IRE},
+  volume={46},
+  number={10},
+  pages={1741--1744},
+  year={1958}
+}
+
+@article{reed,
+  title={{A class of multiple-error-correcting codes and the decoding scheme}},
+  author={Reed, I.},
+  journal={Information Theory, Transactions of the IRE Professional Group on},
+  volume={4},
+  number={4},
+  pages={38--49},
+  year={1954}
+}
+
+
+@article{muller,
+  title={{Application of Boolean algebra to switching circuit design and to error detection}},
+  author={Muller, DE},
+  journal={Algebraic coding theory: history and development},
+  pages={43},
+  year={1973},
+  publisher={Dowden, Hutchinson \& Ross Inc.}
+}
+
+
+@article{uniq,
+  title={{Notes on Reed-Muller Codes}},
+  author={Chen, Y. and Vinck, H.},
+  year={2009}
+}
+
+
+%% BOOKS %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
 @book{sloane,
@@ -290,6 +365,12 @@
   author={Lin, S. and Costello, D.J.},
   year={1983},
   publisher={Prentice-Hall Englewood Cliffs, NJ}
+}
+
+@book{mann,
+  title={{Error Correcting Codes: Proceedings of a Symposium}},
+  author={Mann, H.B.},
+  publisher={John Wiley \& Sons}
 }
 
 
